tests/Unit/Mocks/invalid-project-dir/config/invalid.listeners.php
<?php

return [
    'bad_listener',
];
